// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Modal/DialogModal Icon + one action 1`] = `
.c8 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c8 .farmblocks-icon {
  display: block;
}

.c12 {
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px 16px;
  border-radius: 4px;
  line-height: 1.5;
  height: 40px;
  min-width: 40px;
  white-space: nowrap;
  cursor: pointer;
  -webkit-transition: background 0.3s,color 0.3s,border-color 0.3s;
  transition: background 0.3s,color 0.3s,border-color 0.3s;
  background-color: #fd6a08;
  color: #FFFFFF;
  border: solid 1px rgba(0,0,0,0.16);
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.16);
}

.c12 span {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c12:disabled {
  background-color: rgba(0,0,0,0.32);
  color: rgba(0,0,0,0.32);
  border-width: 1px;
  border-color: rgba(0,0,0,0.16);
  box-shadow: none;
  cursor: default;
}

.c12:disabled .icon {
  color: rgba(0,0,0,0.32);
}

.c12 .icon {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  color: rgba(255,255,255,0.48);
  line-height: 1;
}

.c12:not(:disabled):hover,
.c12:not(:disabled).hovered,
.c12:not(:disabled):active,
.c12:not(:disabled).active {
  background-color: #D45806;
  box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
  padding: 4px 16px;
}

.c12:not(:disabled):hover .icon,
.c12:not(:disabled).hovered .icon,
.c12:not(:disabled):active .icon,
.c12:not(:disabled).active .icon,
.c12:not(:disabled):focus .icon,
.c12:not(:disabled).focused .icon {
  color: #FFFFFF;
}

.c12:not(:disabled).active,
.c12:not(:disabled):active {
  box-shadow: none;
}

.c12:focus,
.c12.focused {
  outline: none;
}

.c12.focus-visible,
.c12.focused:not(:disabled) {
  box-shadow: 0 0 0 3px rgba(52,152,219,0.56);
}

.c9 {
  font-family: Lato,sans-serif;
  font-size: 24px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  font-weight: 600;
}

.c10 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: center;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 > .thumbnail {
  margin-bottom: 24px;
}

.c6 > .description,
.c6 > .info {
  margin-top: 16px;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 16px;
}

.c11 > * {
  margin: 4px;
}

.c7 {
  font-size: 72px;
  color: rgba(0,0,0,0.32);
}

.c3 {
  background-color: #ffffff;
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.08);
  border: solid 1px rgba(0,0,0,0.08);
  width: 560px;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: visible;
  padding: 0;
  padding-top: 0;
  padding-bottom: 0;
}

.c0 {
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
  padding: 8px;
  padding-bottom: 16px;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c1 {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background: rgba(0,0,0,0.32);
}

.c2 {
  max-width: 100%;
  max-height: 100%;
}

.c4 {
  max-height: 100%;
  max-width: 100%;
  min-width: 200px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: none;
  overflow: hidden;
  padding: 0;
  padding-top: 0;
  padding-bottom: 0;
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: auto;
  -webkit-overflow-scrolling: touch;
  padding: 16px;
}

@media screen and (min-width:321px) {
  .c11 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:321px) {
  .c3 {
    padding-top: 16px;
    padding-bottom: 16px;
  }
}

@media screen and (min-width:321px) {
  .c0 {
    padding: 8px;
    padding-bottom: 16px;
  }
}

@media screen and (min-width:415px) {
  .c0 {
    padding: 40px;
    padding-bottom: 40px;
  }
}

@media screen and (min-width:321px) {
  .c0 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:321px) {
  .c4 {
    padding-top: 16px;
    padding-bottom: 16px;
  }
}

<div
  className="c0"
  justifyContent={
    Array [
      "flex-end",
      "flex-start",
    ]
  }
  p={
    Array [
      1,
      1,
      5,
    ]
  }
  pb={
    Array [
      2,
      2,
      5,
    ]
  }
  style={
    Object {
      "opacity": 0,
      "position": "fixed",
      "zIndex": 1500,
    }
  }
>
  <div
    className="c1 overlay"
    data-testid="modal-overlay"
    onClick={[Function]}
  />
  <div
    className="c2"
    style={
      Object {
        "transform": "translate3D(0, 50px, 0)",
      }
    }
  >
    <div
      className="c3 c4 card"
      overflow="visible"
      width="560px"
    >
      <div
        className="c5 content"
      >
        <div
          className="c6 empty-state"
        >
          <div
            className="c7"
          >
            <span
              className="c8"
              color="currentColor"
              size="1em"
            >
              <svg
                aria-hidden={true}
                className="farmblocks-icon "
                height="1em"
                viewBox="4 4 32 32"
                width="1em"
              >
                <path
                  d="M31 20c0-6.074-4.926-11-11-11-6.075 0-11 4.925-11 11s4.925 11 11 11 11-4.925 11-11zm2 0c0 7.18-5.82 13-13 13S7 27.18 7 20 12.82 7 20 7c7.179 0 13 5.821 13 13zm-13 4.019c1.119 0 1.948.828 1.948 1.903v.044c0 1.074-.83 1.903-1.948 1.903-1.119 0-1.948-.829-1.948-1.903v-.044c0-1.075.83-1.903 1.948-1.903zM18.008 13.14c-.067-.648.292-1.14.895-1.14h2.195c.602 0 .961.492.894 1.14l-.962 8.416c-.068.605-.47.986-1.03.986s-.962-.38-1.03-.986l-.962-8.416z"
                  fill="currentColor"
                  fillRule="nonzero"
                />
              </svg>
            </span>
          </div>
          <div
            className="c9 title"
            fontWeight="title"
            size={24}
            type="#2f313a"
          >
            Dialog Modal Title
          </div>
          <div
            className="c10 description"
            size={18}
            type="#59636f"
          >
            Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
          </div>
          <div
            className="c11 buttons"
          >
            <button
              className="c12 undefined   "
              data-testid="empty-state-button-Primary Action"
              onClick={[Function]}
              type="button"
            >
              <span>
                Primary Action
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Modal/DialogModal Image + two actions 1`] = `
.c11 {
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px 16px;
  border-radius: 4px;
  line-height: 1.5;
  height: 40px;
  min-width: 40px;
  white-space: nowrap;
  cursor: pointer;
  -webkit-transition: background 0.3s,color 0.3s,border-color 0.3s;
  transition: background 0.3s,color 0.3s,border-color 0.3s;
  background-color: #FFFFFF;
  color: #59636f;
  border: solid 1px rgba(0,0,0,0.16);
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.16);
}

.c11 span {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c11:disabled {
  background-color: rgba(0,0,0,0.32);
  color: rgba(0,0,0,0.32);
  border-width: 1px;
  border-color: rgba(0,0,0,0.16);
  box-shadow: none;
  cursor: default;
}

.c11:disabled .icon {
  color: rgba(0,0,0,0.32);
}

.c11 .icon {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  color: rgba(0,0,0,0.32);
  line-height: 1;
}

.c11:not(:disabled):hover,
.c11:not(:disabled).hovered,
.c11:not(:disabled):active,
.c11:not(:disabled).active {
  color: #3498db;
  border-width: 2px;
  border-color: #3498db;
  box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
  padding: 3px 15px;
}

.c11:not(:disabled):hover .icon,
.c11:not(:disabled).hovered .icon,
.c11:not(:disabled):active .icon,
.c11:not(:disabled).active .icon,
.c11:not(:disabled):focus .icon,
.c11:not(:disabled).focused .icon {
  color: #3498db;
}

.c11:not(:disabled).active,
.c11:not(:disabled):active {
  box-shadow: none;
}

.c11:focus,
.c11.focused {
  outline: none;
}

.c11.focus-visible,
.c11.focused:not(:disabled) {
  box-shadow: 0 0 0 3px rgba(52,152,219,0.56);
}

.c12 {
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px 16px;
  border-radius: 4px;
  line-height: 1.5;
  height: 40px;
  min-width: 40px;
  white-space: nowrap;
  cursor: pointer;
  -webkit-transition: background 0.3s,color 0.3s,border-color 0.3s;
  transition: background 0.3s,color 0.3s,border-color 0.3s;
  background-color: #fd6a08;
  color: #FFFFFF;
  border: solid 1px rgba(0,0,0,0.16);
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.16);
}

.c12 span {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c12:disabled {
  background-color: rgba(0,0,0,0.32);
  color: rgba(0,0,0,0.32);
  border-width: 1px;
  border-color: rgba(0,0,0,0.16);
  box-shadow: none;
  cursor: default;
}

.c12:disabled .icon {
  color: rgba(0,0,0,0.32);
}

.c12 .icon {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  color: rgba(255,255,255,0.48);
  line-height: 1;
}

.c12:not(:disabled):hover,
.c12:not(:disabled).hovered,
.c12:not(:disabled):active,
.c12:not(:disabled).active {
  background-color: #D45806;
  box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
  padding: 4px 16px;
}

.c12:not(:disabled):hover .icon,
.c12:not(:disabled).hovered .icon,
.c12:not(:disabled):active .icon,
.c12:not(:disabled).active .icon,
.c12:not(:disabled):focus .icon,
.c12:not(:disabled).focused .icon {
  color: #FFFFFF;
}

.c12:not(:disabled).active,
.c12:not(:disabled):active {
  box-shadow: none;
}

.c12:focus,
.c12.focused {
  outline: none;
}

.c12.focus-visible,
.c12.focused:not(:disabled) {
  box-shadow: 0 0 0 3px rgba(52,152,219,0.56);
}

.c8 {
  font-family: Lato,sans-serif;
  font-size: 24px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  font-weight: 600;
}

.c9 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: center;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 > .thumbnail {
  margin-bottom: 24px;
}

.c6 > .description,
.c6 > .info {
  margin-top: 16px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 16px;
}

.c10 > * {
  margin: 4px;
}

.c7 {
  box-sizing: border-box;
  border-radius: 4px;
  object-fit: cover;
}

.c3 {
  background-color: #ffffff;
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.08);
  border: solid 1px rgba(0,0,0,0.08);
  width: 700px;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: visible;
  padding: 0;
  padding-top: 0;
  padding-bottom: 0;
}

.c0 {
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
  padding: 8px;
  padding-bottom: 16px;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c1 {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background: rgba(0,0,0,0.32);
}

.c2 {
  max-width: 100%;
  max-height: 100%;
}

.c4 {
  max-height: 100%;
  max-width: 100%;
  min-width: 200px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: none;
  overflow: hidden;
  padding: 0;
  padding-top: 0;
  padding-bottom: 0;
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: auto;
  -webkit-overflow-scrolling: touch;
  padding: 16px;
}

@media screen and (min-width:321px) {
  .c10 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:321px) {
  .c3 {
    padding-top: 16px;
    padding-bottom: 16px;
  }
}

@media screen and (min-width:321px) {
  .c0 {
    padding: 8px;
    padding-bottom: 16px;
  }
}

@media screen and (min-width:415px) {
  .c0 {
    padding: 40px;
    padding-bottom: 40px;
  }
}

@media screen and (min-width:321px) {
  .c0 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
}

@media screen and (min-width:321px) {
  .c4 {
    padding-top: 16px;
    padding-bottom: 16px;
  }
}

<div
  className="c0"
  justifyContent={
    Array [
      "flex-end",
      "flex-start",
    ]
  }
  p={
    Array [
      1,
      1,
      5,
    ]
  }
  pb={
    Array [
      2,
      2,
      5,
    ]
  }
  style={
    Object {
      "opacity": 0,
      "position": "fixed",
      "zIndex": 1500,
    }
  }
>
  <div
    className="c1 overlay"
    data-testid="modal-overlay"
    onClick={[Function]}
  />
  <div
    className="c2"
    style={
      Object {
        "transform": "translate3D(0, 50px, 0)",
      }
    }
  >
    <div
      className="c3 c4 card"
      overflow="visible"
      width="700px"
    >
      <div
        className="c5 content"
      >
        <div
          className="c6 empty-state"
        >
          <img
            alt=""
            className="c7 thumbnail"
            height={72}
            size={72}
            src="https://picsum.photos/200?image=0"
            width={72}
          />
          <div
            className="c8 title"
            fontWeight="title"
            size={24}
            type="#2f313a"
          >
            Dialog Modal Title
          </div>
          <div
            className="c9 description"
            size={18}
            type="#59636f"
          >
            Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
          </div>
          <div
            className="c10 buttons"
          >
            <button
              className="c11 undefined   "
              data-testid="empty-state-button-Neutral Action"
              onClick={[Function]}
              type="button"
            >
              <span>
                Neutral Action
              </span>
            </button>
            <button
              className="c12 undefined   "
              data-testid="empty-state-button-Primary Action"
              onClick={[Function]}
              type="button"
            >
              <span>
                Primary Action
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Modal/DialogModal With state 1`] = `
<div>
  <button
    onClick={[Function]}
  >
    Do Something
  </button>
</div>
`;
